# R252_SAM

./: .gitignore  README.md  asymmetry.py  extract_state_dict.py  main.py  model_map.py  plot-asymmetry-all.py  plot-asymmetry-fake.py  plot-asymmetry-individual.py  plot-asymmetry-scatter.py  plot-train-accuracy.py  plot-train-loss.py  plot-val-accuracy.py  plot-val-loss.py  pyplot.py  pyproject.toml
SAM-Checkpoints/crisp-field-152/: asymmetry-factor.txt  asymmetry-loss-plot.txt  final-test-loss.txt  final-train-loss.txt
SAM-Checkpoints/dandy-pyramid-92/: state_dict.pickle_weights_xignore=biasbn_xnorm=filter_yignore=biasbn_ynorm=filter.h5_[-1.0,1.0,51]x[-1.0,1.0,51].h5
SAM-Checkpoints/denim-frost-166/: asymmetry-factor.txt  asymmetry-loss-plot.txt  final-test-loss.txt  final-train-loss.txt  state_dict.pickle_weights_xignore=biasbn_xnorm=filter_yignore=biasbn_ynorm=filter.h5_[-1.0,1.0,51]x[-1.0,1.0,51].h5  (+1 more)
analysis/: .~lock.sharpness_collection.csv#  analysis.txt  sharpness.py  sharpness_collection.csv  sharpness_collection.py  sharpness_collection_2.csv  sharpness_graphs.py
config/: asam.yaml  asam_debug.yaml  finetune.yaml  finetune_debug.yaml  finetune_sam.yaml  finetune_sgd.yaml  mobilenet.yaml  mobilenetv2.yaml  mobilenetv2_rp.yaml  sam.yaml  sam_debug.yaml  sam_final.yaml  sam_swa_comp.yaml  sam_swa_comp_2.yaml  sam_swa_comp_3.yaml  sgd.yaml
dnn-mode-connectivity/: curves.py  data.py  eval_curve.py  plane.py  train.py  utils.py
sam/: __init__.py  main.py
stats/: train-accuracy.csv  train-loss.csv  validation-accuracy.csv  validation-loss.csv
(+99 files in other folders)
