[tool.poetry]
name = "R252_sam"
version = "0.1.0"
description = ""
authors = ["Kian Cross <kian@kiancross.co.uk>"]

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.13.1"
pytorch-lightning = "^1.8.5"
omegaconf = "^2.3.0"
torchvision = "^0.14.1"
lpips = "^0.1.4"
wandb = "^0.13.7"
tqdm = "^4.64.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
